--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>10 superfoods to boost a healthy diet</title>
   </head>
 
   <body>
     <a name="top"></a>
+    <a id="backtotop" href="#top">Back to top</a>
     <header>
       <h1>10 superfoods to boost a healthy diet</h1>
-      <p>Written by Katherine D. McManus, MS, RD, LDN</p>
-      <p>
+      <p class="center">Written by Katherine D. McManus, MS, RD, LDN</p>
+      <p class="center">
         <small
           ><a
             href="https://www.health.harvard.edu/blog/10-superfoods-to-boost-a-healthy-diet-2018082914463"
@@ -21,7 +24,6 @@
     </header>
 
     <main>
-      <img src="images/sfoods.jpg" alt="Superfoods" width="400" />
       <p>
         No single food — not even a superfood — can offer all the nutrition,
         health benefits, and energy we need to nourish ourselves. The 2015–2020
@@ -46,11 +48,12 @@
 
       <h2>Superfoods list</h2>
 
-      <article>
-        <h3>Berries.</h3>
-        <img src="images/berries.jpg" alt="Berries" width="400" />
-        <details>
-          <summary>Learn more</summary>
+      <div>
+        <article>
+          <h3>Berries</h3>
+          <div class="polaroid">
+            <img src="images/berries.jpg" alt="Berries" width="400" />
+          </div>
           <p>
             High in fiber, berries are naturally sweet, and their rich colors
             mean they are high in antioxidants and disease-fighting nutrients.
@@ -60,184 +63,199 @@
             just as healthy to buy them frozen. Add to yogurt, cereals, and
             smoothies, or eat plain for a snack.
           </p>
-        </details>
-      </article>
+        </article>
+      </div>
 
-      <article>
-        <h3>Fish.</h3>
-        <img src="images/fish.jpg" alt="Fish" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            Fish can be a good source of protein and omega-3 fatty acids, which
-            help prevent heart disease.
-          </p>
-          <p>
-            <em>How to include it: </em>Buy fresh, frozen, or canned fish. Fish
-            with the highest omega-3 content are salmon, tuna steaks, mackerel,
-            herring, trout, anchovies, and sardines.
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Fish</h3>
+          <div class="polaroid">
+            <img src="images/fish.jpg" alt="Fish" width="400" />
+          </div>
+            <p>
+              Fish can be a good source of protein and omega-3 fatty acids,
+              which help prevent heart disease.
+            </p>
+            <p>
+              <em>How to include it: </em>Buy fresh, frozen, or canned fish.
+              Fish with the highest omega-3 content are salmon, tuna steaks,
+              mackerel, herring, trout, anchovies, and sardines.
+            </p>
+        </article>
+      </div>
 
-      <article>
-        <h3>Leafy greens.</h3>
-        <img src="images/greens.jpg" alt="Leafy greens" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            Dark, leafy greens are a good source of vitamin A, vitamin C, and
-            calcium, as well as several phytochemicals (chemicals made by plants
-            that have a positive effect on your health). They also add fiber
-            into the diet.
-          </p>
-          <p>
-            <em>How to include them: </em>Try varieties such as spinach, swiss
-            chard, kale, collard greens, or mustard greens. Throw them into
-            salads or sauté them in a little olive oil. You can also add greens
-            to soups and stews.
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Leafy greens</h3>
+          <div class="polaroid">
+            <img src="images/greens.jpg" alt="Leafy greens" width="400" />
+          </div>
+            <p>
+              Dark, leafy greens are a good source of vitamin A, vitamin C, and
+              calcium, as well as several phytochemicals (chemicals made by
+              plants that have a positive effect on your health). They also add
+              fiber into the diet.
+            </p>
+            <p>
+              <em>How to include them: </em>Try varieties such as spinach, swiss
+              chard, kale, collard greens, or mustard greens. Throw them into
+              salads or sauté them in a little olive oil. You can also add
+              greens to soups and stews.
+            </p>
+        </article>
+      </div>
 
-      <article>
-        <h3>Nuts.</h3>
-        <img src="images/nuts.jpeg" alt="Nuts" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            Hazelnuts, walnuts, almonds, pecans — nuts are a good source of
-            plant protein. They also contain monounsaturated fats, which may be
-            a factor in reducing the risk of heart disease.
-          </p>
-          <p>
-            <em>How to include them: </em>Add a handful to oatmeal or yogurt or
-            have as a snack. But remember they are calorically dense, so limit
-            to a small handful. Try the various types of nut butters such as
-            peanut (technically a legume), almond, or cashew. Nuts are also a
-            great accompaniment to cooked veggies or salads.
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Nuts</h3>
+          <div class="polaroid">
+            <img src="images/nuts.jpeg" alt="Nuts" width="400" />
+          </div>
+            <p>
+              Hazelnuts, walnuts, almonds, pecans — nuts are a good source of
+              plant protein. They also contain monounsaturated fats, which may
+              be a factor in reducing the risk of heart disease.
+            </p>
+            <p>
+              <em>How to include them: </em>Add a handful to oatmeal or yogurt
+              or have as a snack. But remember they are calorically dense, so
+              limit to a small handful. Try the various types of nut butters
+              such as peanut (technically a legume), almond, or cashew. Nuts are
+              also a great accompaniment to cooked veggies or salads.
+            </p>
+        </article>
+      </div>
 
-      <article>
-        <h3>Olive oil.</h3>
-        <img src="images/oil.jpg" alt="Olive oil" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            Olive oil is a good source of vitamin E, polyphenols, and
-            monounsaturated fatty acids, all which help reduce the risk of heart
-            disease.
-          </p>
-          <p>
-            <em>How to include it: </em>Use in place of butter or margarine in
-            pasta or rice dishes. Drizzle over vegetables, use as a dressing, or
-            when sautéing.
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Olive oil</h3>
+          <div class="polaroid">
+            <img src="images/oil.jpg" alt="Olive oil" width="400" />
+          </div>
+            <p>
+              Olive oil is a good source of vitamin E, polyphenols, and
+              monounsaturated fatty acids, all which help reduce the risk of
+              heart disease.
+            </p>
+            <p>
+              <em>How to include it: </em>Use in place of butter or margarine in
+              pasta or rice dishes. Drizzle over vegetables, use as a dressing,
+              or when sautéing.
+            </p>
+        </article>
+      </div>
 
-      <article>
-        <h3>Whole grains.</h3>
-        <img src="images/grains.jpg" alt="Whole grains" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            A good source of both soluble and insoluble fiber, whole grains also
-            contain several B vitamins, minerals, and phytonutrients. They have
-            been shown to lower cholesterol and protect against heart disease
-            and diabetes.
-          </p>
-          <p>
-            <em>How to include them: </em>Try having a bowl of oatmeal for
-            breakfast. Substitute bulgur, quinoa, wheat berries, or brown rice
-            for your usual baked potato. When buying breads at the supermarket,
-            look to see that the first ingredient is “100% whole wheat flour.”
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Whole grains</h3>
+          <div class="polaroid">
+            <img src="images/grains.jpg" alt="Whole grains" width="400" />
+          </div>
+            <p>
+              A good source of both soluble and insoluble fiber, whole grains
+              also contain several B vitamins, minerals, and phytonutrients.
+              They have been shown to lower cholesterol and protect against
+              heart disease and diabetes.
+            </p>
+            <p>
+              <em>How to include them: </em>Try having a bowl of oatmeal for
+              breakfast. Substitute bulgur, quinoa, wheat berries, or brown rice
+              for your usual baked potato. When buying breads at the
+              supermarket, look to see that the first ingredient is “100% whole
+              wheat flour.”
+            </p>
+        </article>
+      </div>
 
-      <article>
-        <h3>Yogurt.</h3>
-        <img src="images/yogurt.jpg" alt="Yogurt" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            A good source of calcium and protein, yogurt also contains live
-            cultures called probiotics. These “good bacteria” can protect the
-            body from other, more harmful bacteria.
-          </p>
-          <p>
-            <em>How to include it: </em>Try eating more yogurt, but watch out
-            for fruited or flavored yogurts, which contain a lot of added sugar.
-            Buy plain yogurt and add your own fruit. Look for yogurts that have
-            “live active cultures” such as Lactobacillus, L. acidophilus, L.
-            bulgaricus, and S. thermophilus. You can use yogurt in place of
-            mayonnaise or sour cream in dips or sauces.
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Yogurt</h3>
+          <div class="polaroid">
+            <img src="images/yogurt.jpg" alt="Yogurt" width="400" />
+          </div>
+            <p>
+              A good source of calcium and protein, yogurt also contains live
+              cultures called probiotics. These “good bacteria” can protect the
+              body from other, more harmful bacteria.
+            </p>
+            <p>
+              <em>How to include it: </em>Try eating more yogurt, but watch out
+              for fruited or flavored yogurts, which contain a lot of added
+              sugar. Buy plain yogurt and add your own fruit. Look for yogurts
+              that have “live active cultures” such as Lactobacillus, L.
+              acidophilus, L. bulgaricus, and S. thermophilus. You can use
+              yogurt in place of mayonnaise or sour cream in dips or sauces.
+            </p>
+        </article>
+      </div>
 
-      <article>
-        <h3>Cruciferous vegetables.</h3>
-        <img src="images/vegs.jpg" alt="Cruciferous vegetables" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            These include broccoli, Brussels sprouts, cabbage, cauliflower,
-            collard greens, kale, kohlrabi, mustard greens, radishes, and
-            turnips. They are an excellent source of fiber, vitamins, and
-            phytochemicals including indoles, thiocyanates, and nitriles, which
-            may prevent against some types of cancer.
-          </p>
-          <p>
-            <e>How to include them: </e>Steam or stir-fry, adding healthy oils
-            and herbs and seasonings for flavor. Try adding a frozen cruciferous
-            vegetable medley to soups, casseroles, and pasta dishes.
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Cruciferous vegetables</h3>
+          <div class="polaroid">
+            <img
+              src="images/vegs.jpg"
+              alt="Cruciferous vegetables"
+              width="400"
+            />
+          </div>
+            <p>
+              These include broccoli, Brussels sprouts, cabbage, cauliflower,
+              collard greens, kale, kohlrabi, mustard greens, radishes, and
+              turnips. They are an excellent source of fiber, vitamins, and
+              phytochemicals including indoles, thiocyanates, and nitriles,
+              which may prevent against some types of cancer.
+            </p>
+            <p>
+              <e>How to include them: </e>Steam or stir-fry, adding healthy oils
+              and herbs and seasonings for flavor. Try adding a frozen
+              cruciferous vegetable medley to soups, casseroles, and pasta
+              dishes.
+            </p>
+        </article>
+      </div>
 
-      <article>
-        <h3>Legumes.</h3>
-        <img src="images/legumes.jpg" alt="Legumes" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            This broad category includes kidney, black, red, and garbanzo beans,
-            as well as soybeans and peas. Legumes are an excellent source of
-            fiber, folate, and plant-based protein. Studies show they can help
-            reduce the risk of heart disease.
-          </p>
-          <p>
-            <em>How to include them: </em>Add to salads, soups, and casseroles.
-            Make a chili or a bean- based spread such as hummus.
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Legumes</h3>
+          <div class="polaroid">
+            <img src="images/legumes.jpg" alt="Legumes" width="400" />
+          </div>
+            <p>
+              This broad category includes kidney, black, red, and garbanzo
+              beans, as well as soybeans and peas. Legumes are an excellent
+              source of fiber, folate, and plant-based protein. Studies show
+              they can help reduce the risk of heart disease.
+            </p>
+            <p>
+              <em>How to include them: </em>Add to salads, soups, and
+              casseroles. Make a chili or a bean- based spread such as hummus.
+            </p>
+        </article>
+      </div>
 
-      <article>
-        <h3>Tomatoes.</h3>
-        <img src="images/tomatoes.jpg" alt="Tomatoes" width="400" />
-        <details>
-          <summary>Learn more</summary>
-          <p>
-            These are high in vitamin C and lycopene, which has been shown to
-            reduce the risk of prostate cancer.
-          </p>
-          <p>
-            <em>How to include them: </em>Try tomatoes in a salad or as a tomato
-            sauce over your pasta. You can also put them in stews, soups, or
-            chili. Lycopene becomes more available for your body to use when
-            tomatoes are prepared and heated in a healthy fat such as olive oil.
-          </p>
-        </details>
-      </article>
+      <div>
+        <article>
+          <h3>Tomatoes</h3>
+          <div class="polaroid">
+            <img src="images/tomatoes.jpg" alt="Tomatoes" width="400" />
+          </div>
+            <p>
+              These are high in vitamin C and lycopene, which has been shown to
+              reduce the risk of prostate cancer.
+            </p>
+            <p>
+              <em>How to include them: </em>Try tomatoes in a salad or as a
+              tomato sauce over your pasta. You can also put them in stews,
+              soups, or chili. Lycopene becomes more available for your body to
+              use when tomatoes are prepared and heated in a healthy fat such as
+              olive oil.
+            </p>
+        </article>
+      </div>
     </main>
 
     <footer>
-      <a href="#top">Back to top</a>
       <p><small>Designed by Cris Furlin, 2021.</small></p>
     </footer>
   </body>
